
    * ``bzr revision-info`` now supports a -d option to specify an
      alternative branch. (Michael Hudson)

  BUG FIXES:
  
    * Allow BzrDir implementation to implement backing up of 
      control directory. (#139691)

    * Don't call iteritems on transport_list_registry, because it may
      change during iteration.  (Martin Pool, #277048)

    * Fix SystemError in ``_patiencediff_c`` module by calling
      PyErr_NoMemory() before returning NULL in PatienceSequenceMatcher_new.
      (Andrew Bennetts, #303206)

    * Give proper error message for diff with non-existent dotted revno.
      (Marius Kruger, #301969)

    * ``Transport.readv()`` defaults to not reading more than 100MB in a
      single array. Further ``RemoteTransport.readv`` sets this to 5MB to
      work better with how it splits its requests.
      (John Arbash Meinel, #303538)

    * ``pull -v`` now respects the log_format configuration variable.
      (Aaron Bentley)

  DOCUMENTATION:

  API CHANGES:

    * ``node_distances`` and ``select_farthest`` can no longer be imported
      from ``bzrlib.graph``.  They can still be imported from
      ``bzrlib.deprecated_graph``, which has been the preferred way to
      import them since before 1.0.  (Andrew Bennetts)
      
    * The logic in commit now delegates inventory basis calculations to
      the ``CommitBuilder`` object; this requires that the commit builder
      in use has been updated to support the new ``recording_deletes`` and
      ``record_delete`` methods. (Robert Collins)

  TESTING:

  INTERNALS:

    * ``KnitVersionedFiles.get_record_stream()`` will now chose a
      more optimal ordering when the keys are requested 'unordered'.
      Previously the order was fully random, now the records should be
      returned from each pack in turn, in forward I/O order.
      (John Arbash Meinel)

    * New method ``bzrlib.repository.Repository.add_inventory_by_delta``
      allows adding an inventory via an inventory delta, which can be