@@ -36,6 +36,9 @@ IN DEVELOPMENT
     * Don't call iteritems on transport_list_registry, because it may
       change during iteration.  (Martin Pool, #277048)
 
+    * Fix compilation error in ``_dirstate_helpers_c`` on SunOS/Solaris.
+      (Jari Aalto)
+
     * Fix SystemError in ``_patiencediff_c`` module by calling
       PyErr_NoMemory() before returning NULL in PatienceSequenceMatcher_new.
       (Andrew Bennetts, #303206)
